...
  );
}

export const ReceiptView = forwardRef<View, { data: ReceiptViewData }>(({ data }, ref) => {
  const fields: [string, string][] = [
    ["Préstamo", `#${data.loanNumber}`],
    ["Cliente", data.name],
    ["Fecha", data.date],
    ["No. de Pago", data.paymentNumber]
  ];
  if (data.method) fields.push(["Método", data.method]);
  if (data.amountPaid) fields.push(["Cuota", data.amountPaid]);
  if (data.feePaid) fields.push(["Mora", data.feePaid]);
...
