appId: do.mikro.app
---
- runFlow: subflows/unlock.yaml
- tapOn:
    text: "Ruta"
    index: 1
- extendedWaitUntil:
    visible:
      id: "visit-1003"
    timeout: 5000
- tapOn:
    id: "visit-1003"
- extendedWaitUntil:
    visible: "Cliente"
    timeout: 5000
- assertVisible: "1003"
